# Path-Tracer

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  RayTracing.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
include/: box.hh  camera.hh  color.hh  image.hh  mesh.hh  obj_reader.hh  plane.hh  scene.hh  sphere.hh  texture.hh  triangle.hh  utils.hh
src/: blob.hh  blob_tables.hh  box.cc  camera.cc  camera.hh  color.cc  color.hh  colors.hh  image.cc  image.hh  light.cc  light.hh  main.cc  object.hh  photon.hh  plane.cc  scene.cc  scene.hh  sphere.cc  texture.cc  texture.hh  triangle.cc  utils.cc  utils.hh  vector3.cc  vector3.hh
